--- a/editentry.html
+++ b/editentry.html
@@ -63,7 +63,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./backoffice.html">Back Office</a>
+            <a class="nav-link" href="./backoffice.html">Back</a>
           </li>
         </ul>
         <div>
