--- a/newentry.html
+++ b/newentry.html
@@ -218,15 +218,15 @@
               Authorization:
                 "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MzA3NmUyOTFlYjc2ZDAwMTUxNTAxODQiLCJpYXQiOjE2NjE0MzEzMzcsImV4cCI6MTY2MjY0MDkzN30.yVRsTSWKhu2WIrAbnKX_R0Fml1OgasMgaw02ueY0Q4E",
               "Content-Type": "application/json",
-            })
+            }),
           }
         );
 
-        document.getElementById("nameEnter").value = ""
-        document.getElementById("priceEnter").value = ""
-        document.getElementById("descEnter").value = ""
-        document.getElementById("brandEnter").value = ""
-        document.getElementById("imgEnter").value = ""
+        document.getElementById("nameEnter").value = "";
+        document.getElementById("priceEnter").value = "";
+        document.getElementById("descEnter").value = "";
+        document.getElementById("brandEnter").value = "";
+        document.getElementById("imgEnter").value = "";
 
         window.location.href = "./backoffice.html";
       };
