--- a/newentry.html
+++ b/newentry.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crudazon Store</title>
+    <title>Crudazon Store | New Entry</title>
     <link
       rel="canonical"
       href="https://getbootstrap.com/docs/4.3/examples/album/"
